[workspace]
members = [
	"src/daemon",
	"src/cli",
	"src/common",
	"src/pam",
	"src/nss",
	"src/policies",
	"src/idmap",
	"src/broker",
	"src/sshd-config",
	"src/sso",
	"src/qr-greeter",
	"src/broker-client",
	"src/selinux",
	"src/o365",
	"fuzz",
	"src/fxhash",
	"src/serde_cbor",
	"src/paste",
	"src/sshkey-attest",
	"src/kanidm_build_profiles",
	"src/picky-krb",
]
resolver = "2"

[patch.crates-io]
fxhash = { path = "src/fxhash" }
serde_cbor = { path = "src/serde_cbor" }
paste = { path = "src/paste" }
sshkey-attest = { path = "src/sshkey-attest" }
kanidm_build_profiles = { path = "src/kanidm_build_profiles" }
picky-krb = { path = "src/picky-krb" }

[workspace.package]
version = "3.0.0"
authors = [
    "David Mulder <dmulder@suse.com>"
]
rust-version = "1.73"
edition = "2021"
license = "GPL-3.0-or-later"
homepage = "https://github.com/himmelblau-idm/himmelblau"
repository = "https://github.com/himmelblau-idm/himmelblau"

[workspace.dependencies]
libc = "^0.2.181"
pkg-config = "^0.3.32"
lazy_static = "^1.4.0"
paste = "^1.0.12"
serde = { version = "^1.0.228", features = ["derive"] }
serde_json = "^1.0.149"
tracing-subscriber = "^0.3.22"
tracing = "^0.1.37"
himmelblau_unix_common = { path = "src/common" }
libhimmelblau = { version = "0.8.9", features = ["broker", "changepassword", "on_behalf_of", "mfa_method_selection", "optional_mfa"] }
clap = { version = "^4.5", features = ["derive", "env"] }
clap_complete = "^4.5.65"
reqwest = { version = "^0.12.24", features = ["json"] }
anyhow = "^1.0.101"
tokio = { version = "^1.49.0", features = ["rt", "macros", "sync", "time", "net", "io-util", "signal", "rt-multi-thread"] }
tokio-util = { version = "^0.7.18", features = ["codec"] }
async-trait = "^0.1.89"
himmelblau_policies = { path = "src/policies" }
pem = "^3.0.6"
chrono = "^0.4.42"
os-release = "^0.1.0"
jsonwebtoken = "^9.2.0"
zeroize = "^1.8.2"
idmap = { path = "src/idmap" }
identity_dbus_broker = "0.1.4"
rustls = ">=0.23.19" # CVE-2024-11738
console-subscriber = "0.5.0"
broker-client = { path = "src/broker-client" }

# Kanidm deps
argon2 = { version = "0.5.2", features = ["alloc"] }
base32 = "^0.5.0"
base64 = "^0.22.0"
base64urlsafedata = "0.5.0"
hex = "^0.4.3"
num_enum = "^0.7.5"
scim_proto = "^1.6.4"
serde_with = "3.16.1"
time = { version = "^0.3.44", features = ["formatting", "local-offset"] }
url = "^2.4.0"
urlencoding = "2.1.3"
uuid = { version = "^1.19.0", features = ["v4", "v5"] }
webauthn-rs-proto = "0.5.0"
kanidm_proto = "1.8.1"
openssl-sys = "^0.9"
openssl = "^0.10.75"
rand = "^0.9.2"
tss-esapi = "^7.2.0"
sketching = "1.8.6"
tracing-forest = "^0.1.6"
rusqlite = "^0.37.0"
hashbrown = { version = "0.16.1", features = ["serde", "inline-more"] }
lru = "^0.16.2"
kanidm_lib_crypto = "1.8.6"
kanidm_utils_users = "1.8.1"
walkdir = "2"
csv = "1.4.0"
notify-debouncer-full = { version = "0.5" }
utoipa = "4.2.0"
utoipa-swagger-ui = "4.0.0"
opentelemetry = { version = "0.27.0" }
opentelemetry_api = { version = "0.27.0", features = ["logs", "metrics"] }
opentelemetry-otlp = { version = "0.27.0", default-features = false, features = [
    "serde",
    "logs",
    "metrics",
    "http-proto",
    "grpc-tonic",
] }
opentelemetry_sdk = { version = "0.27.0", features = ["rt-tokio"] }
opentelemetry-semantic-conventions = "0.27.0"
tracing-opentelemetry = "0.28.0"
tracing-core = "0.1.34"
tonic = "0.14.3"
compact_jwt = { version = "0.5.4", features = ["msextensions"] }
kanidm-hsm-crypto = { version = "^0.3.5" }
whoami = "1.6.1"
kanidm_lib_file_permissions = "1.8.6"
md4 = "0.10.2"
md-5 = "0.10.6"
sha-crypt = "0.5.0"
sha2 = "0.11.0-rc"
x509-cert = "0.2.5"
