[workspace]
members = [
	"src/daemon",
	"src/cli",
	"src/common",
	"src/pam",
	"src/nss",
	"src/policies",
	"src/idmap",
	"src/broker",
	"src/sshd-config",
	"src/sso",
	"src/sso-policies",
	"src/qr-greeter",
	"src/broker-client",
	"src/selinux",
	"src/o365",
	"fuzz",
]
resolver = "2"

[replace]
"base64:0.21.7" = { path = "src/overrides/base64/0.21.7" }
"const-oid:0.9.6" = { path = "src/overrides/const-oid/0.9.6" }
"core-foundation:0.9.4" = { path = "src/overrides/core-foundation/0.9.4" }
"cpufeatures:0.2.17" = { path = "src/overrides/cpufeatures/0.2.17" }
"foldhash:0.1.5" = { path = "src/overrides/foldhash/0.1.5" }
"getrandom:0.2.16" = { path = "src/overrides/getrandom/0.2.16" }
"getrandom:0.3.3" = { path = "src/overrides/getrandom/0.3.3" }
"hashbrown:0.15.5" = { path = "src/overrides/hashbrown/0.15.5" }
"hashbrown:0.16.1" = { path = "src/overrides/hashbrown/0.16.1" }
"indexmap:1.9.3" = { path = "src/overrides/indexmap/1.9.3" }
"linux-raw-sys:0.4.15" = { path = "src/overrides/linux-raw-sys/0.4.15" }
"memoffset:0.8.0" = { path = "src/overrides/memoffset/0.8.0" }
"paste:1.0.15" = { path = "src/overrides/paste" }
"pastey:0.1.1" = { path = "src/overrides/pastey/0.1.1" }
"picky-krb:0.12.0" = { path = "src/overrides/picky-krb" }
"reqwest:0.12.24" = { path = "src/overrides/reqwest/0.12.24" }
"schemars:0.9.0" = { path = "src/overrides/schemars/0.9.0" }
"serde_cbor:0.11.2" = { path = "src/overrides/serde_cbor" }
"socket2:0.5.9" = { path = "src/overrides/socket2/0.5.9" }
"thiserror:1.0.69" = { path = "src/overrides/thiserror/1.0.69" }
"toml_datetime:0.6.11" = { path = "src/overrides/toml_datetime/0.6.11" }
"windows-link:0.1.1" = { path = "src/overrides/windows-link/0.1.1" }
"windows-link:0.2.1" = { path = "src/overrides/windows-link/0.2.1" }
"windows-strings:0.3.1" = { path = "src/overrides/windows-strings/0.3.1" }
"windows-strings:0.4.2" = { path = "src/overrides/windows-strings/0.4.2" }
"windows-sys:0.45.0" = { path = "src/overrides/windows-sys/0.45.0" }
"windows-sys:0.52.0" = { path = "src/overrides/windows-sys/0.52.0" }
"windows-sys:0.59.0" = { path = "src/overrides/windows-sys/0.59.0" }
"windows-targets:0.52.6" = { path = "src/overrides/windows-targets/0.52.6" }
"windows-targets:0.53.0" = { path = "src/overrides/windows-targets/0.53.0" }

[workspace.package]
version = "4.0.0"
authors = [
    "David Mulder <dmulder@suse.com>"
]
rust-version = "1.73"
edition = "2021"
license = "GPL-3.0-or-later"
homepage = "https://github.com/himmelblau-idm/himmelblau"
repository = "https://github.com/himmelblau-idm/himmelblau"

[workspace.dependencies]
libc = "^0.2.185"
pkg-config = "^0.3.33"
lazy_static = "^1.4.0"
paste = "^1.0.12"
serde = { version = "^1.0.228", features = ["derive"] }
serde_json = "^1.0.149"
tracing-subscriber = "^0.3.23"
tracing = "^0.1.37"
himmelblau_unix_common = { path = "src/common" }
libhimmelblau = { version = "0.8.18", features = ["broker", "changepassword", "on_behalf_of", "mfa_method_selection", "optional_mfa", "intune_portal_vers_selection", "redirect_uri", "pop_support"] }
clap = { version = "^4.6", features = ["derive", "env"] }
clap_complete = "^4.6.2"
reqwest = { version = "^0.12.24", features = ["json"] }
anyhow = "^1.0.102"
tokio = { version = "^1.52.0", features = ["rt", "macros", "sync", "time", "net", "io-util", "signal", "rt-multi-thread"] }
tokio-util = { version = "^0.7.18", features = ["codec"] }
async-trait = "^0.1.89"
himmelblau_policies = { path = "src/policies" }
pem = "^3.0.6"
chrono = "^0.4.44"
os-release = "^0.1.0"
jsonwebtoken = "^9.2.0"
zeroize = "^1.8.2"
idmap = { path = "src/idmap" }
identity_dbus_broker = "0.2.1"
rustls = ">=0.23.19" # CVE-2024-11738
console-subscriber = "0.5.0"
broker-client = { path = "src/broker-client" }
libkrimes = { version = "0.1.0", features = ["keyring"] }

# Kanidm deps
argon2 = { version = "0.5.2", features = ["alloc"] }
base32 = "^0.5.0"
base64 = "^0.22.0"
base64urlsafedata = "0.5.0"
hex = "^0.4.3"
num_enum = "^0.7.6"
scim_proto = "^1.6.4"
serde_with = "3.18.0"
time = { version = "^0.3.44", features = ["formatting", "local-offset"] }
url = "^2.4.0"
urlencoding = "2.1.3"
uuid = { version = "^1.23.0", features = ["v4", "v5"] }
webauthn-rs-proto = "0.5.0"
kanidm_proto = "1.8.1"
openssl-sys = "^0.9"
openssl = "^0.10.77"
rand = "^0.9.4"
tss-esapi = "^7.2.0"
sketching = "1.9.1"
tracing-forest = "^0.1.6"
rusqlite = "^0.37.0"
hashbrown = { version = "0.17.0", features = ["serde", "inline-more"] }
lru = "^0.16.4"
kanidm_lib_crypto = "1.9.1"
kanidm_utils_users = "1.8.1"
walkdir = "2"
csv = "1.4.0"
notify-debouncer-full = { version = "0.5" }
utoipa = "4.2.0"
utoipa-swagger-ui = "4.0.0"
opentelemetry = { version = "0.27.0" }
opentelemetry_api = { version = "0.27.0", features = ["logs", "metrics"] }
opentelemetry-otlp = { version = "0.27.0", default-features = false, features = [
    "serde",
    "logs",
    "metrics",
    "http-proto",
    "grpc-tonic",
] }
opentelemetry_sdk = { version = "0.27.0", features = ["rt-tokio"] }
opentelemetry-semantic-conventions = "0.27.0"
tracing-opentelemetry = "0.28.0"
tracing-core = "0.1.34"
tonic = "0.14.5"
compact_jwt = { version = "0.5.3-dev", features = ["msextensions"] }
kanidm-hsm-crypto = { version = "^0.3.5" }
whoami = "1.6.1"
kanidm_lib_file_permissions = "1.9.1"
md4 = "0.10.2"
md-5 = "0.10.6"
sha-crypt = "0.5.0"
sha2 = "0.11.0"
x509-cert = "0.2.5"
