[package]
name = "aad-tool"
description = "Himmelblau Command Line Tool"

version.workspace = true
authors.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[[bin]]
name = "aad-tool"
path = "src/main.rs"

[dependencies]
himmelblau_unix_common = { workspace = true }
msal = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing-subscriber = { workspace = true }
tracing = { workspace = true }
clap = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
rpassword = "^7.2.0"
hostname = "^0.3.1"
os-release = "^0.1.0"
uuid = { version = "^1.3.4", features = [ "v4" ] }
