[package]
name = "broker"
version.workspace = true
authors.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
dbus = "0.9.7"
himmelblau_unix_common.workspace = true
identity_dbus_broker.workspace = true
tokio.workspace = true
tracing.workspace = true
