[package]
name = "broker"
description = "Entra ID Himmelblau Identity Broker"
version.workspace = true
authors.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
dbus = "0.9.10"
himmelblau_unix_common.workspace = true
identity_dbus_broker.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true }

[package.metadata.deb]
name = "himmelblau-broker"
depends = ["$auto"]
recommends = ["himmelblau-sso | linux-entra-sso"]
breaks = ["himmelblau-sso (<< 3.0.0~)"]
replaces = ["microsoft-identity-broker", "himmelblau-sso (<< 3.0.0~)"]
conflicts = ["microsoft-identity-broker"]
provides = ["microsoft-identity-broker"]
assets = [
  ["target/release/broker", "usr/sbin/himmelblau_broker", "755"],
  ["platform/com.microsoft.identity.broker1.service", "usr/share/dbus-1/services/", "644"],
  ["platform/himmelblau-broker.service", "usr/lib/systemd/user/", "644"],
]
maintainer-scripts = "scripts"

[package.metadata.generate-rpm]
name = "himmelblau-broker"
assets = [
  { source = "target/release/broker", dest = "/usr/sbin/himmelblau_broker", mode = "755" },
  { source = "platform/com.microsoft.identity.broker1.service", dest = "/usr/share/dbus-1/services/", mode = "644" },
  { source = "platform/himmelblau-broker.service", dest = "/usr/lib/systemd/user/", mode = "644" },
]
post_install_script = "scripts/postinst"
pre_uninstall_script = "scripts/prerm"
post_uninstall_script = "scripts/postrm"

[package.metadata.generate-rpm.provides]
microsoft-identity-broker = ""
