[package]
name = "aad-tool"
description = "Himmelblau Command Line Tool"

version.workspace = true
authors.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[[bin]]
name = "aad-tool"
path = "src/main.rs"

[dependencies]
himmelblau_unix_common = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing-subscriber = { workspace = true }
tracing = { workspace = true }
clap = { workspace = true, features = ["derive"] }
clap_complete = { workspace = true }
anyhow = { workspace = true }
uzers = "^0.12.2"
sketching = { workspace = true }
rpassword = "^7.2.0"
