[package]
name = "aad-tool"
description = "Himmelblau Command Line Tool"

version.workspace = true
authors.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[[bin]]
name = "aad-tool"
path = "src/main.rs"

[dependencies]
himmelblau_unix_common = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
clap = { workspace = true, features = ["derive"] }
anyhow = { workspace = true }
sketching = { workspace = true }
rpassword = "^7.4.0"
libc.workspace = true
libhimmelblau.workspace = true
kanidm-hsm-crypto.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
broker-client.workspace = true
uuid.workspace = true

[package.metadata.cargo-machete]
ignored = ["libhimmelblau"]
