[package]
name = "himmelblau_unix_common"

version.workspace = true
authors.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[features]
tpm = ["kanidm-hsm-crypto/tpm", "libhimmelblau/tpm"]

[lib]
name = "himmelblau_unix_common"
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
serde_derive = "^1.0.164"
serde_json = { workspace = true }
tracing = { workspace = true }
configparser = "^3.0.2"
libhimmelblau = { workspace = true }
reqwest = { workspace = true }
pem = { workspace = true }
kanidm-hsm-crypto = { workspace = true }
compact_jwt = { workspace = true }
os-release = { workspace = true }
zeroize = { workspace = true }
idmap = { workspace = true }

# Kanidm deps
rusqlite = { workspace = true }
hashbrown = { workspace = true }
tokio = { workspace = true, features = ["rt", "fs", "macros", "sync", "time", "net", "io-util"] }
tokio-util = { workspace = true, features = ["codec"] }
lru = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
kanidm_lib_crypto = { workspace = true }
libc = { workspace = true }
bytes = "^1.10.1"
futures = "^0.3.28"
anyhow = { workspace = true }
kanidm_utils_users = { workspace = true }
csv = { workspace = true }
sketching = { workspace = true }
kanidm_lib_file_permissions.workspace = true
regex = "1.11.3"
sha2 = "0.10.9"
base64.workspace = true
authenticator = { version = "0.4.1", default-features = false, features = ["crypto_openssl"] }
rpassword = "7.4.0"
der = "0.7.10"
