[package]
name = "himmelblaud"
description = "Himmelblau Authentication Daemon"

version.workspace = true
authors.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[[bin]]
name = "himmelblaud"
path = "src/daemon.rs"

[[bin]]
name = "himmelblaud_tasks"
path = "src/tasks_daemon.rs"

[dependencies]
himmelblau_unix_common = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
bytes = "^1.3.0"
serde = { workspace = true }
serde_json.workspace = true
futures = "^0.3.28"
systemd-journal-logger = "^2.1.1"
users = "^0.11.0"
sketching = { workspace = true }
walkdir = { workspace = true }
libc = { workspace = true }
kanidm_utils_users = { workspace = true }
csv = { workspace = true }
notify-debouncer-full = { workspace = true }
kanidm-hsm-crypto = { workspace = true }
kanidm_lib_file_permissions.workspace = true
identity_dbus_broker.workspace = true
base64.workspace = true
async-trait = "0.1.83"

[package.metadata.deb]
name = "himmelblau"
maintainer = "David Mulder <dmulder@suse.com>"
depends = ["libssl3", "libsqlite3-0", "libutf8proc3"]
recommends = ["nss-himmelblau", "pam-himmelblau"]
assets = [
  ["../../platform/debian/himmelblau.conf.example", "etc/himmelblau/himmelblau.conf", "644"],
  ["target/release/aad-tool", "usr/bin/", "755"],
  ["../../platform/debian/himmelblaud-tasks.service", "etc/systemd/system/", "644"],
  ["../../platform/debian/himmelblaud.service", "etc/systemd/system/", "644"],
  ["../../platform/debian/org.samba.himmelblau.conf", "usr/share/dbus-1/system.d/", "644"],
  ["../../platform/debian/com.microsoft.identity.broker1.service", "usr/share/dbus-1/services/", "644"],
  ["target/release/himmelblaud", "usr/sbin/", "755"],
  ["target/release/himmelblaud_tasks", "usr/sbin/", "755"],
  ["target/release/broker", "usr/sbin/", "755"],
  ["../../README.md", "usr/share/doc/himmelblau/README", "644"],
]

[package.metadata.generate-rpm]
name = "himmelblau"
maintainer = "David Mulder <dmulder@suse.com>"
assets = [
  { source = "../../src/config/himmelblau.conf.example", dest = "/etc/himmelblau/himmelblau.conf", mode = "644" },
  { source = "target/release/aad-tool", dest = "/usr/bin/", mode = "755" },
  { source = "../../platform/opensuse/himmelblaud-tasks.service", dest = "/usr/lib/systemd/system/", mode = "644" },
  { source = "../../platform/opensuse/himmelblaud.service", dest = "/usr/lib/systemd/system/", mode = "644" },
  { source = "../../platform/opensuse/org.samba.himmelblau.conf", dest = "/usr/share/dbus-1/system.d/", mode = "644" },
  { source = "../../platform/opensuse/com.microsoft.identity.broker1.service", dest = "/usr/share/dbus-1/services/", mode = "644" },
  { source = "target/release/himmelblaud", dest = "/usr/sbin/", mode = "755" },
  { source = "target/release/himmelblaud_tasks", dest = "/usr/sbin/", mode = "755" },
  { source = "target/release/broker", dest = "/usr/sbin/", mode = "755" },
  { source = "../../README.md", dest = "/usr/share/doc/himmelblau/README", mode = "644" },
]

[package.metadata.generate-rpm.recommends]
nss-himmelblau = "*"
pam-himmelblau = "*"
