[package]
name = "himmelblaud"
description = "Himmelblau Authentication Daemon"

version.workspace = true
authors.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[[bin]]
name = "himmelblaud"
path = "src/daemon.rs"

[[bin]]
name = "himmelblaud_tasks"
path = "src/tasks_daemon.rs"

[dependencies]
himmelblau_unix_common = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
bytes = "^1.11.0"
serde = { workspace = true }
serde_json.workspace = true
futures = "^0.3.28"
systemd-journal-logger = "^2.2.2"
uzers = "^0.12.1"
sketching = { workspace = true }
walkdir = { workspace = true }
libc = { workspace = true }
kanidm_utils_users = { workspace = true }
csv = { workspace = true }
notify-debouncer-full = { workspace = true }
kanidm-hsm-crypto = { workspace = true }
kanidm_lib_file_permissions.workspace = true
identity_dbus_broker.workspace = true
base64.workspace = true
async-trait = "0.1.89"
sd-notify = "0.4.5"
libhimmelblau.workspace = true

[package.metadata.deb]
name = "himmelblau"
maintainer = "David Mulder <dmulder@suse.com>"
depends = ["$auto"]
recommends = ["nss-himmelblau", "pam-himmelblau", "krb5-user"]
assets = [
  ["../../platform/debian/himmelblau.conf.example", "etc/himmelblau/himmelblau.conf", "644"],
  ["../../src/config/krb5_himmelblau.conf", "etc/krb5.conf.d/", "644"],
  ["target/release/aad-tool", "usr/bin/", "755"],
  ["../../platform/debian/himmelblaud-tasks.service", "etc/systemd/system/", "644"],
  ["../../platform/debian/himmelblaud.service", "etc/systemd/system/", "644"],
  ["target/release/himmelblaud", "usr/sbin/", "755"],
  ["target/release/himmelblaud_tasks", "usr/sbin/", "755"],
  ["../../README.md", "usr/share/doc/himmelblau/README", "644"],
  ["../../src/config/himmelblau.conf.example", "usr/share/doc/himmelblau/", "644"],
  ["../../man/man1/aad-tool.1", "usr/share/man/man1/", "644"],
  ["../../man/man5/himmelblau.conf.5", "usr/share/man/man5/", "644"],
  ["../../man/man8/himmelblaud.8", "usr/share/man/man8/", "644"],
  ["../../man/man8/himmelblaud_tasks.8", "usr/share/man/man8/", "644"],
]

[package.metadata.generate-rpm]
name = "himmelblau"
maintainer = "David Mulder <dmulder@suse.com>"
assets = [
  { source = "../../src/config/himmelblau.conf.example", dest = "/etc/himmelblau/himmelblau.conf", mode = "644" },
  { source = "../../src/config/krb5_himmelblau.conf", dest = "/etc/krb5.conf.d/", mode = "644" },
  { source = "target/release/aad-tool", dest = "/usr/bin/", mode = "755" },
  { source = "../../platform/opensuse/himmelblaud-tasks.service", dest = "/usr/lib/systemd/system/", mode = "644" },
  { source = "../../platform/opensuse/himmelblaud.service", dest = "/usr/lib/systemd/system/", mode = "644" },
  { source = "target/release/himmelblaud", dest = "/usr/sbin/", mode = "755" },
  { source = "target/release/himmelblaud_tasks", dest = "/usr/sbin/", mode = "755" },
  { source = "../../README.md", dest = "/usr/share/doc/himmelblau/README", mode = "644" },
  { source = "../../src/config/himmelblau.conf.example", dest = "/usr/share/doc/himmelblau/", mode = "644" },
  { source = "../../man/man1/aad-tool.1", dest = "/usr/share/man/man1/", mode = "644" },
  { source = "../../man/man5/himmelblau.conf.5", dest = "/usr/share/man/man5/", mode = "644" },
  { source = "../../man/man8/himmelblaud.8", dest = "/usr/share/man/man8/", mode = "644" },
  { source = "../../man/man8/himmelblaud_tasks.8", dest = "/usr/share/man/man8/", mode = "644" },
]

[package.metadata.generate-rpm.recommends]
nss-himmelblau = "*"
pam-himmelblau = "*"
krb5 = "*"
